# serenity-additions

./: Cargo.toml  README.md
src/: core.rs  ephemeral_message.rs  error.rs  event_handlers.rs  lib.rs
src/events/: event_callbacks.rs  handler.rs  mod.rs
src/menu/: container.rs  controls.rs  menu.rs  page.rs  traits.rs
