[package]
name = "serenity-rich-interaction"
version = "0.2.1"
authors = ["trivernis <trivernis@protonmail.com>"]
edition = "2018"
description = "Menus and self deleting messages for the serenity discord framework"
license = "Apache-2.0"
repository = "https://github.com/Trivernis/serenity-rich-interactions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["native_tls_backend"]
rustls_backend = ["serenity/rustls_backend"]
native_tls_backend  = ["serenity/native_tls_backend"]

[dependencies]
tokio = "1.4.0"
thiserror = "1.0.24"
log = "0.4.14"
futures = "0.3.14"
serde_json = "1.0.64"

[dependencies.serenity]
version = "0.10.5"
default-features = false
features = ["builder", "http", "cache", "model", "client", "gateway"]