[package]
name = "serenity-additions"
version = "0.3.0"
authors = ["trivernis <trivernis@protonmail.com>"]
edition = "2018"
description = "Menus and self deleting messages for the serenity discord framework"
license = "Apache-2.0"
repository = "https://github.com/Trivernis/serenity-rich-interactions"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["native_tls_backend"]
rustls_backend = ["serenity/rustls_backend"]
native_tls_backend  = ["serenity/native_tls_backend"]

[dependencies]
tokio = "1.17.0"
thiserror = "1.0.30"
tracing= "0.1.33"
futures = "0.3.21"
serde_json = "1.0.79"
dashmap = "5.2.0"

[dependencies.serenity]
version = "0.10.10"
default-features = false
features = ["builder", "http", "cache", "model", "client", "gateway"]
